--- a/src/CombatAnalysis.WebApp/ClientApp/src/styles/account/login.scss
+++ b/src/CombatAnalysis.WebApp/ClientApp/src/styles/account/login.scss
@@ -5,7 +5,7 @@
     gap: 50px;
 
     .preview {
-        box-shadow: 2px 2px 2px 2px gray;
+        box-shadow: 2px 2px 2px 2px #3AA6B9;
         border-radius: 20px;
         padding: 30px;
         margin: 0 50px;
