--- a/src/CombatAnalysis.WebApp/ClientApp/src/styles/account/registration.scss
+++ b/src/CombatAnalysis.WebApp/ClientApp/src/styles/account/registration.scss
@@ -12,5 +12,9 @@
         display: flex;
         gap: 25px;
         margin: 15px 0;
+
+        input {
+            color: black;
+        }
     }
 }
