--- a/src/CombatAnalysis.WebApp/ClientApp/src/styles/communication/chats/chatMessage.scss
+++ b/src/CombatAnalysis.WebApp/ClientApp/src/styles/communication/chats/chatMessage.scss
@@ -4,7 +4,8 @@
     height: 500px;
     width: 100%;
     margin: 12px 0px;
-    box-shadow: 3px 3px 3px 3px gray;
+    border-radius: 5px;
+    box-shadow: 3px 3px 3px 3px white;
     gap: 5px;
     padding: 15px;
     overflow-y: scroll;
