--- a/src/CombatAnalysis.WebApp/ClientApp/src/styles/communication/create.scss
+++ b/src/CombatAnalysis.WebApp/ClientApp/src/styles/communication/create.scss
@@ -7,8 +7,7 @@
     width: 700px;
     height: 500px;
     padding: 10px;
-    box-shadow: 5px 5px 5px 5px gray;
-    background: white;
+    box-shadow: 3px 3px 3px 3px white;
 
     &__content {
         display: flex;
