--- a/src/CombatAnalysis.WebApp/ClientApp/src/styles/home.scss
+++ b/src/CombatAnalysis.WebApp/ClientApp/src/styles/home.scss
@@ -10,10 +10,16 @@
         gap: 25px;
 
         .preview {
-            box-shadow: 2px 2px 2px 2px gray;
+            box-shadow: 3px 3px 3px 3px #3AA6B9;
             border-radius: 20px;
             padding: 30px;
             font-size: 17px;
+
+            &__title {
+                width: 100%;
+                text-align: center;
+                font-weight: bold;
+            }
 
             &__responsibilities .form-check {
                 margin: 10px;
