--- a/src/CombatAnalysis.WebApp/ClientApp/src/custom.css
+++ b/src/CombatAnalysis.WebApp/ClientApp/src/custom.css
@@ -7,6 +7,28 @@ a {
   box-shadow: 0 0 0 0.1rem white, 0 0 0 0.25rem #258cfb;
 }
 
+.main {
+    position: fixed;
+    top: 0;
+    height: 1000px;
+    width: 100%;
+    background: #0c192c;
+    z-index: -1;
+}
+
+#root, #root .navbar-brand, #root input, #root .card, #root .card-body {
+    color: white;
+}
+
+#root input[type=text], #root input[type=email], #root input[type=password], #root input[type=number], #root input[type=date], #root textarea {
+    background: #7AB2B2;
+    color: black;
+}
+
+.card {
+    background: #0c192c;
+}
+
 code {
   color: #E01A76;
 }
@@ -24,7 +46,7 @@ code {
     padding: 5px 10px;
     border: 2px solid gray;
     border-radius: 15px;
-    box-shadow: 3px 3px 3px 3px gray;
+    box-shadow: 2px 2px 2px 2px #3AA6B9;
     cursor: pointer;
 }
 
@@ -35,7 +57,7 @@ code {
     padding: 5px 10px;
     border: 2px solid gray;
     border-radius: 15px;
-    box-shadow: 3px 3px 3px 3px gray;
+    box-shadow: 2px 2px 2px 2px #3AA6B9;
     cursor: default;
     opacity: 0.5;
 }
