--- a/src/CombatAnalysis.WebApp/ClientApp/src/styles/communication/community/communities.scss
+++ b/src/CombatAnalysis.WebApp/ClientApp/src/styles/communication/community/communities.scss
@@ -67,7 +67,9 @@
                 .card {
                     width: 250px;
                     border-radius: 30px;
-                    box-shadow: 3px 3px 3px 3px #C1C4EA;
+                    box-shadow: 4px 4px white;
+                    background: #088395;
+                    color: white;
 
                     .links {
                         display: flex;
