--- a/src/CombatAnalysis.WebApp/ClientApp/src/styles/communication/people/people.scss
+++ b/src/CombatAnalysis.WebApp/ClientApp/src/styles/communication/people/people.scss
@@ -15,6 +15,7 @@
                 padding: 10px;
                 font-family: 'Comic Sans MS';
                 cursor: default;
+                background: #4793AF;
 
                 svg {
                     cursor: pointer;
