--- a/src/CombatAnalysis.WebApp/ClientApp/src/styles/detailsSpecificalCombat.scss
+++ b/src/CombatAnalysis.WebApp/ClientApp/src/styles/detailsSpecificalCombat.scss
@@ -3,41 +3,49 @@
         .dashboard {
             display: flex;
 
-            .damage-progress, .heal-progress {
+            &__statistics {
                 display: flex;
+                align-items: center;
                 flex-direction: column;
-                gap: 15px;
-                color: white;
+                min-width: 300px;
+                gap: 25px;
 
-                li {
+                .damage-progress, .heal-progress, .damage-taken-progress {
                     display: flex;
                     flex-direction: column;
-                    gap: 5px;
-                }
-
-                .title {
-                    display: flex;
-                    justify-content: space-between;
-
-                    .value {
-                        font-size: 13px;
-                    }
-                }
-
-                .player-statistics {
-                    display: flex;
                     gap: 15px;
+                    color: white;
 
-                    .progress {
-                        width: 300px;
-                        height: 25px;
-                        box-shadow: 3px 3px 3px 3px #028391;
+                    li {
+                        display: flex;
+                        flex-direction: column;
+                        gap: 5px;
                     }
 
-                    .player-contribution {
-                        border-radius: 10px;
-                        padding: 3px;
-                        box-shadow: 2px 2px 2px 2px #7AB2B2;
+                    .title {
+                        display: flex;
+                        justify-content: space-between;
+
+                        .value {
+                            font-size: 14px;
+                        }
+                    }
+
+                    .player-statistics {
+                        display: flex;
+                        gap: 15px;
+
+                        .progress {
+                            width: 300px;
+                            height: 25px;
+                            box-shadow: 3px 3px 3px 3px #028391;
+                        }
+
+                        .player-contribution {
+                            border-radius: 10px;
+                            padding: 3px;
+                            box-shadow: 2px 2px 2px 2px #7AB2B2;
+                        }
                     }
                 }
             }
