--- a/src/CombatAnalysis.WebApp/ClientApp/src/styles/mainInformation.scss
+++ b/src/CombatAnalysis.WebApp/ClientApp/src/styles/mainInformation.scss
@@ -50,8 +50,8 @@
 
     .title {
         display: flex;
-        justify-content: space-between;
         align-items: center;
+        gap: 25px;
 
         .actions {
             display: flex;
