--- a/src/CombatAnalysis.WebApp/ClientApp/src/styles/account/login.scss
+++ b/src/CombatAnalysis.WebApp/ClientApp/src/styles/account/login.scss
@@ -1,26 +1,21 @@
-﻿.login-container {
+﻿.login {
     display: flex;
-    justify-content: start;
-    margin: 50px 0;
-    gap: 50px;
+    flex-direction: column;
+    gap: 20px;
 
-    .preview {
-        box-shadow: 2px 2px 2px 2px #3AA6B9;
-        border-radius: 20px;
-        padding: 30px;
-        margin: 0 50px;
-        font-size: 17px;
-
-        &__responsibilities .form-check {
-            margin: 10px;
-
-            label {
-                opacity: 1;
-            }
-        }
+    &__title {
+        margin-left: 50px;
+        font-size: 18px;
+        font-weight: bold;
     }
 
-    .login {
+    &__container {
+        display: flex;
+        justify-content: start;
+        gap: 50px;
+    }
+
+    &__submit {
         width: 300px;
 
         &__error-message {
@@ -32,6 +27,10 @@
 
         .remember {
             margin: 15px 0;
+        }
+
+        .finish-login {
+            box-shadow: 2px 2px 2px 2px green;
         }
     }
 }
